# segar-workspace

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  depend_libs.txt
cmake/: GetThirdParty.cmake  aarch64-orin-gcc_13.2.0.toolchain.cmake  x86_64-linux-gcc_9.5.0.toolchain.cmake
docs/: Segar_Action.md  Segar_Api_Reference.md  Segar_Cli.md  Segar_Component.md  Segar_Engineering.md  Segar_Examples.md  Segar_Launch.md  Segar_Parameter.md  Segar_Recorder.md  Segar_Ros2_Compatible.md  Segar_Scheduler.md  Segar_Service.md  Segar_Topic.md  Segar_Tracing.md  Segar_User_Guide.md
docs/test_reports/: Functional_Test_Report.md  Integration_Test_Report.md  Segar_vs_Ros2_Action_Test.md  Segar_vs_Ros2_Service_Test.md  Segar_vs_Ros2_Topic_Test.md
scripts/: build_base.sh  build_orin.sh  build_x86.sh  check_all.sh  clang-format.sh  pkg_base.sh  pkg_orin.sh  pkg_x86.sh  run_segar_cli.sh  start_all.sh  stop_all.sh
src/: CMakeLists.txt
src/action_example/: CMakeLists.txt
src/action_example/action_client_async/: CMakeLists.txt
src/action_example/action_client_async/scripts/: launch.sh
src/action_example/action_client_async/src/: action_client_async.cc
src/action_example/action_client_sync/: CMakeLists.txt
src/action_example/action_client_sync/scripts/: launch.sh
src/action_example/action_client_sync/src/: action_client_sync.cc
src/action_example/action_server/: CMakeLists.txt
src/action_example/action_server/scripts/: launch.sh
src/action_example/action_server/src/: action_server.cc
src/component_example/: CMakeLists.txt
src/component_example/common_component/: CMakeLists.txt
src/component_example/common_component/config/: common.dag  params.yaml
src/component_example/common_component/scripts/: launch.sh
src/component_example/common_component/src/: common_component_example.cc  common_component_example.h
src/component_example/timer_component/: CMakeLists.txt
src/component_example/timer_component/config/: timer.dag
src/component_example/timer_component/scripts/: launch.sh
src/component_example/timer_component/src/: timer_component_example.cc  timer_component_example.h
src/concurrent_example/: CMakeLists.txt
src/concurrent_example/tasker/: CMakeLists.txt
src/concurrent_example/tasker/scripts/: launch.sh
src/concurrent_example/tasker/src/: tasker.cc
src/launch_example/: example.flag  example.launch  start_example_launch.sh
src/param_example/: CMakeLists.txt
src/param_example/param_client/: CMakeLists.txt
src/param_example/param_client/scripts/: launch.sh
src/param_example/param_client/src/: param_client.cc
src/param_example/param_server/: CMakeLists.txt
src/param_example/param_server/config/: params.yaml  segar.pb.conf
src/param_example/param_server/scripts/: launch.sh
src/param_example/param_server/src/: param_server.cc
src/param_example/proto/: param_example.pb.cc  param_example.pb.h  param_example.proto
src/segar_config/: segar_setup.bash
src/segar_config/config/: record_config.conf  topics.pb.conf  tracing_config.pb.txt  tracing_node.dag
src/service_example/: CMakeLists.txt
src/service_example/service_client_async/: CMakeLists.txt
src/service_example/service_client_async/scripts/: launch.sh
src/service_example/service_client_async/src/: service_client_async.cc
src/service_example/service_client_sync/: CMakeLists.txt
src/service_example/service_client_sync/scripts/: launch.sh
src/service_example/service_client_sync/src/: service_client_sync.cc
src/service_example/service_server/: CMakeLists.txt
src/service_example/service_server/scripts/: launch.sh
src/service_example/service_server/src/: service_server.cc
src/topic_example/: CMakeLists.txt
src/topic_example/topic_listener/: CMakeLists.txt
src/topic_example/topic_listener/scripts/: launch.sh
src/topic_example/topic_listener/src/: topic_listener.cc
src/topic_example/topic_talker/: CMakeLists.txt
src/topic_example/topic_talker/scripts/: launch.sh
src/topic_example/topic_talker/src/: topic_talker.cc
src/type_src/example/action/: LookUpTransform.action
src/type_src/example/msg/: CameraInfo.msg  Image.msg  String.msg
src/type_src/example/srv/: SetCameraInfo.srv
